--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fuyin_agency",
   "homepage": "https://www.vitewebjs.com/",
   "private": true,
-  "version": "1.0.3",
+  "version": "1.0.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -29,6 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-image-optimizer": "^1.1.8"
   }
 }
