--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fuyin_agency",
   "homepage": "https://www.vitewebjs.com/",
   "private": true,
-  "version": "1.0.4",
+  "version": "1.0.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.0",
+    "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-lazy-load-image-component": "^1.6.3",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.0"
   },
   "devDependencies": {
